# liwan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE.md  PLAN.md  PLANS.md  README.md  about.toml  audit.toml  biome.json  bun.lockb  cliff.toml  config.example.toml  liwan.schema.json  package.json  rustfmt.toml
.cargo/: config.toml
.github/: .gitattributes  CONTRIBUTING.md
.github/workflows/: audit.yaml  audit.yaml.disable  container.yaml  release.yaml  test-web.yaml  test.yaml
benches/: reports.rs
data/: config.example.toml  countries.txt  crawlers.txt  geo.json  licenses-cargo.json  licenses-npm.json  referer_icons.txt  referers.txt  referrer_icons.txt  referrers.txt  spammers.txt  spammers.txt.zstd  ua_regexes.json  ua_regexes.json.zstd  ua_regexes.yaml
scripts/: Containerfile  Dockerfile  build-licenses.sh  build-tracker.sh  deploy-demo.sh  update-data.sh  update-licenses.sh
scripts/screenshot/: bun.lockb  index.ts  package.json
src/: api.rs  app.rs  cli.rs  config.rs  lib.rs  main.rs  reports.rs
src/api/: admin.rs  auth.rs  dashboard.rs  event.rs  mod.rs  session.rs  webext.rs
src/app/: core.rs  db.rs  mod.rs  models.rs  reports.rs
src/app/core/: entities.rs  events.rs  geoip.rs  onboarding.rs  projects.rs  reports.rs  reports_cached.rs  sessions.rs  settings.rs  users.rs
src/app/core/reports/: dimension.rs  graph.rs  mod.rs  shared.rs  stats.rs
src/migrations/: V1__initial.sql  V1__initial_events.sql  V2__initial_app.sql  current.sql
src/migrations/app/: V1__initial.sql  V2__settings.sql  V3__project_unlisted.sql  V4__entity_allowed_hostnames.sql
src/migrations/events/: V1__initial.sql  V2__remove_indexes.sql  V3__utm_params.sql  V4__session_intervals.sql  V5__screen_size.sql  V6__visitor_group_id.sql  v2__remove_indexes.sql
src/utils/: duckdb.rs  geo.rs  hash.rs  ip_headers.rs  mod.rs  r2d2_sqlite.rs  referer.rs  referrer.rs  refinery_duckdb.rs  refinery_sqlite.rs  seed.rs  signals.rs  ua.rs  useragent.rs  validate.rs  writable.rs
src/web/: mod.rs  session.rs  webext.rs
src/web/routes/: admin.rs  auth.rs  dashboard.rs  event.rs  mod.rs
src/web_axum/: mod.rs  webext.rs
src/web_axum/routes/: admin.rs  auth.rs  dashboard.rs  event.rs  mod.rs
tests/: auth.rs  dashboard.rs  event.rs
tests/common/: mod.rs
tests_old/: auth.rs  event.rs
tests_old/common/: mod.rs
tracker/: LICENSE.md  README.md  build.sh  package.json  script.d.ts  script.min.js  script.min.js.br  script.ts
web/: astro.config.ts  bun.lockb  package.json  tsconfig.json
web/src/: api.ts  config.ts  constants.ts  global.css  utils.test.ts  utils.ts
web/src/api/: client.ts  constants.ts  dashboard.ts  hooks.ts  index.ts  query.ts  ranges.test.ts  ranges.ts  types.ts  utils.ts
web/src/components/: ThemeSwitcher.astro  card.module.css  card.tsx  dialog.module.css  dialog.tsx  graph.module.css  graph.tsx  group.module.css  group.tsx  groups.module.css  groups.tsx  icons.tsx  loginButton.tsx  modals.tsx  project.module.css  project.tsx  projects.module.css  projects.tsx  table.module.css  table.tsx  tags.module.css  tags.tsx  toast-host.tsx  toast.module.css  toast.ts  userInfo.module.css  userInfo.tsx  worldmap.module.css  worldmap.tsx
web/src/components/dashboard/project/: card.module.css  card.tsx  filter.module.css  filter.tsx  icons.module.css  icons.tsx  index.module.css  index.tsx  metric.tsx  project-header.module.css  project-header.tsx  range.module.css  range.tsx
web/src/components/dashboard/project/date-range/: index.tsx
web/src/components/dashboard/project/dimensions/: dimensions.module.css  index.tsx  modal.tsx
web/src/components/dashboard/project/graph/: axis.ts  index.tsx  linegraph.module.css  linegraph.tsx
web/src/components/dashboard/project/worldmap/: index.tsx  map.module.css
web/src/components/dashboard/projects/: index.tsx  projects.module.css
web/src/components/daterange/: daterange.module.css  index.tsx
web/src/components/dimensions/: dimensions.module.css  index.tsx  modal.tsx  utils.ts
web/src/components/graph/: axis.ts  graph.module.css  graph.tsx  index.tsx
web/src/components/graph2/: graph.module.css  graph.tsx  index.tsx
web/src/components/project/: filter.module.css  filter.tsx  metric.module.css  metric.tsx  project.module.css  project.tsx  range.module.css  range.tsx
web/src/components/settings/: collection.module.css  collection.tsx  dialogs.module.css  dialogs.tsx  filters.module.css  filters.tsx  form.module.css  form.tsx  me.module.css  me.tsx  resource-pages.module.css  resource-pages.tsx  settings.module.css  snippet.module.css  snippet.tsx  tables.module.css  tables.tsx  tags.module.css  tags.tsx
web/src/components/settings/collection/: collection.module.css  index.tsx
web/src/components/settings/entities/: dialogs.tsx  index.tsx
web/src/components/settings/me/: index.tsx  me.module.css
web/src/components/settings/projects/: dialogs.tsx  index.tsx
web/src/components/settings/users/: dialogs.tsx  index.tsx
web/src/components/ui/: dialog.module.css  dialog.tsx  snippet.module.css  snippet.tsx  table.module.css  toast.tsx  user-info.module.css  user-info.tsx
web/src/components/worldmap/: index.tsx  map.module.css
web/src/hooks/: api.ts  persist.ts
web/src/layout/: Base.astro  Layout.astro
web/src/layouts/: Base.astro  Layout.astro  Settings.astro  base.astro  layout.astro  settings.astro
web/src/pages/: attributions.astro  index.astro  login.astro  setup.astro  test.astro
web/src/pages/g/: [...page].astro
web/src/pages/p/: [...project].astro
web/src/pages/project/: [...project].astro
web/src/pages/settings/: collection.astro  entities.astro  me.astro  projects.astro  users.astro
web/src/pages/settings/entities/: [entityId].astro
web/src/pages/settings/projects/: [projectId].astro
web/src/pages/settings/users/: [username].astro
