[package]
name="liwan"
version="1.2.1"
edition="2024"
rust-version="1.92"
repository="https://github.com/explodingcamera/liwan"
license="Apache-2.0"
publish=false

[lib]
path="src/lib.rs"

[[bin]]
name="liwan"
path="src/main.rs"

[dependencies]
# async/concurrency
arc-swap="1.8"
tokio={version="1.48", default-features=false, features=["macros", "rt-multi-thread", "signal"]}
tokio-util={version="0.7", features=["io"]}
futures-lite={version="2.6", default-features=false, features=["alloc"]}
quick_cache={version="0.6", features=["ahash"]}

# encoding
hex={version="0.4"}
bs58="0.5"
serde={version="1.0", features=["derive"]}
serde_json={version="1.0"}
md5={package="md-5", version="0.10.6"}
async-compression={version="0.4", default-features=false, features=["gzip", "tokio"]}
tokio-tar={package="astral-tokio-tar", version="0.5"}
sha3={version="0.10"}
argon2={version="0.5", features=["rand"]}
zstd={version="0.13", default-features=false}
uuid={version="1.19", features=["v4"]}

# general
argh={version="0.1", default-features=false, features=["help"]}
anyhow={version="1.0"}
rand={version="0.9", default-features=false, features=["std", "thread_rng"]}
chrono={version="0.4", default-features=false, features=["std", "now"]}
figment={version="0.10", features=["toml", "env"]}
tracing={version="0.1", default-features=false, features=["std"]}
tracing-subscriber={version="0.3", features=["env-filter"]}
ahash="0.8"

# web
axum="0.8"
axum-extra={version="0.12", default-features=false, features=["cookie"]}
http="1.4"
tower={version="0.5", default-features=false, features=["limit"]}
tower-http={version="0.6", default-features=false, features=[
    "cors",
    "compression-zstd",
    "set-header",
]}
aide={version="0.15", default-features=false, features=["axum"]}
schemars={version="1.2", features=["derive"]}

ua-parser="0.2"
rust-embed={version="8.9", features=["mime-guess"]}
reqwest={version="0.13", default-features=false, features=["json", "stream", "charset", "rustls"]}

# database
duckdb={version="1.4", features=["buildtime_bindgen", "chrono", "bundled", "r2d2"]}
rusqlite={version="0.38", features=["bundled", "modern_sqlite", "chrono"]}
r2d2={version="0.8", default-features=false}
refinery={version="0.9", default-features=false}
refinery-core={version="0.9", default-features=false}
maxminddb={version="0.27", optional=true, features=["simdutf8"]}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator="0.6"

[dev-dependencies]
figment={version="*", features=["test"]}
cookie={version="*", default-features=false}

[features]
default=["geoip"]
geoip=["dep:maxminddb"]
_enable_seeding=[]

[profile.dev]
opt-level=1

[profile.release]
lto="thin"
panic="abort"
strip=true
debug=false
opt-level=3

[profile.profiling]
inherits="release"
debug=true
strip=false
