[package]
name="liwan"
version="1.4.0"
edition="2024"
rust-version="1.94"
repository="https://github.com/explodingcamera/liwan"
license="Apache-2.0"
publish=false

[lib]
path="src/lib.rs"

[[bin]]
name="liwan"
path="src/main.rs"

[[bench]]
name="reports"
harness=false

[dependencies]
# async/concurrency
arc-swap="1.9"
tokio={version="1.51", default-features=false, features=["macros", "rt-multi-thread", "signal"]}
tokio-util={version="0.7", features=["io"]}
futures-lite={version="2.6", default-features=false, features=["alloc"]}
quick_cache={version="0.6", features=["ahash"]}

# encoding
hex={version="0.4"}
serde={version="1.0", features=["derive"]}
serde_json={version="1.0"}
md-5={version="0.11.0"}
async-compression={version="0.4", default-features=false, features=["gzip", "tokio"]}
tokio-tar={package="astral-tokio-tar", version="0.6"}
blake3={version="1.8"}
argon2={version="0.6.0-rc.8", features=[]}
password-hash={version="0.6.1", features=[
    "rand_core",
    "getrandom",
]} # required for getrandom feature
zstd={version="0.13", default-features=false}

# general
argh={version="0.1", default-features=false, features=["help"]}
anyhow={version="1.0"}
rand={version="0.10", default-features=false, features=["std", "thread_rng"]}
chrono={version="0.4", default-features=false, features=["std", "now", "serde"]}
config={version="0.15", default-features=false, features=["toml"]}
tracing={version="0.1", default-features=false, features=["std"]}
tracing-subscriber={version="0.3", features=["env-filter"]}
ahash="0.8"
nix={version="0.31", features=["user"]}

# web
axum={version="0.8", default-features=false, features=[
    "http1",
    "tokio",
    "json",
    "matched-path",
    "original-uri",
    "query",
]}
axum-extra={version="0.12", default-features=false, features=["cookie", "typed-header"]}
http="1.4"
headers="0.4"
tower={version="0.5", default-features=false}
tower-http={version="0.6", default-features=false, features=[
    "cors",
    "compression-zstd",
    "set-header",
]}
tower_governor={version="0.8", default-features=false, features=["axum"]}
aide={version="0.16.0-alpha.3", default-features=false, features=[
    "axum",
    "axum-json",
    "axum-matched-path",
    "axum-extra-cookie",
    "axum-extra-headers",
]}
schemars={version="1.2", features=["derive", "chrono04"]}
url="2.5"
ua-parser="0.2"
rust-embed={version="8.11", features=["mime-guess"]}
reqwest={version="0.13", default-features=false, features=["json", "stream", "charset", "rustls"]}
ipnet="2.12"

# database
duckdb={version="1.10501", features=["chrono", "bundled", "r2d2"]}
rusqlite={version="0.39", features=["bundled", "modern_sqlite", "chrono"]}
r2d2={version="0.8", default-features=false}
refinery={version="0.9", default-features=false}
refinery-core={version="0.9", default-features=false}
maxminddb={version="0.27", optional=true, features=["simdutf8"]}
mimalloc={version="0.1", features=["v3"]}

[dev-dependencies]
tempfile={version="3"}
cookie={version="*", default-features=false}
tower={version="*", features=["util"]}
axum-test={version="20"}
criterion={version="0.8", default-features=false}

[features]
default=["geoip"]
geoip=["dep:maxminddb"]
__dev=[]

[profile.dev]
opt-level=1

[profile.release]
lto="thin"
panic="abort"
strip=true
debug=false
opt-level=3

[profile.profiling]
inherits="release"
debug=true
strip=false
